fix css of feed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  background-color: #f3f2ef;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
