--- a/src/styles/Feed.css
+++ b/src/styles/Feed.css
@@ -1,6 +1,6 @@
 .feed {
     flex-direction: 0.6;
-    margin: 0 20px;
+    margin: 17px 20px;
 }
 
 .feed__inputContainer {
